--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,67 @@
-:root{
+:root {
     --blue: #0d6efd;
+    --red: #dc3545;
 }
 
-body{
+body {
     min-height: 3000px;
 }
 
-.form-control{
+.form-control {
     border: solid rgb(132, 137, 147);
-    border-width: 1px;
+    border-width: 2px;
 }
 
-.search-btn{
+.search-btn {
     color: white;
     background-color: var(--blue);
     width: 100px;
 }
 
-.book-detail{
-    padding: 2rem;
-    border:solid rgb(132, 137, 147);
-    border-width: 1px;
+.finish-btn:hover,
+.finish-btn:focus{
+    color: var(--blue);
+    background: white;
+    border: solid 1px var(--blue);
 }
 
-.btn-container{
+.unfinish-btn:hover,
+.unfinish-btn:focus{
+    color: var(--blue);
+    background: white;
+    border: solid 1px var(--blue);
+}
+
+.delete-btn:hover,
+.delete-btn:focus{
+    color: var(--red);
+    background: white;
+    border: solid 1px var(--red);
+}
+
+.book-detail {
+    padding: 2rem;
+    border: solid 2px rgb(132, 137, 147);
+}
+
+.btn-container {
     padding-top: 3rem;
 }
 
-@media screen and (max-width:425px){
-    
+.submit-btn {
+    border-width: 2px;
+}
+
+.submit-btn:hover,
+.submit-btn:focus {
+    color: var(--blue);
+    background: white;
+    border: solid 2px var(--blue);
+}
+
+.search-btn:hover,
+.search-btn:focus {
+    color: var(--blue);
+    background: white;
+    border: solid 2px var(--blue);
 }
